# Simplex_algorithm

./: CMakeLists.txt  Doxyfile  LinearConstrainSystem.hpp  README.md  Tableau.hpp  main.cpp  mainBigM.cpp  mainEQ.cpp  mainINFEASIBLE.cpp  mainMIN.cpp  mainTest.cpp  mainUNBOUND.cpp  print_functions.hpp  simplex_functions.hpp  testEQ.cpp  testINFEASIBLE.cpp  testMIN.cpp  testOUNB.cpp
docs/: Doxyfile
docs/html/: LinearConstrainSystem_8hpp.html  LinearConstrainSystem_8hpp__incl.dot  LinearConstrainSystem_8hpp_source.html  README_8md.html  Tableau_8hpp.html  Tableau_8hpp__dep__incl.dot  Tableau_8hpp__incl.dot  Tableau_8hpp_source.html  _linear_constrain_system_8hpp_source.html  _tableau_8hpp_source.html  annotated.html  classTableau-members.html  classTableau.html  class_tableau-members.html  class_tableau.html  classes.html  dir_000000_000001.html  dir_0bd38e9a9bb50ba019a51fabcc0aec05.html  dir_71f5a49c046f298909a1d8033475cc8f.html  dir_837e9bb440e013754dbbc7cf4ec157f5.html  dir_9e566733183e9430f47e3e22d490e90f.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d522931ffa1371640980b621734a4381.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  mainINFEASIBLE_8cpp.html  mainINFEASIBLE_8cpp__incl.dot  mainMIN_8cpp.html  mainMIN_8cpp__incl.dot  mainUNBOUND_8cpp.html  (+16 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  (+15 more)
docs/latex/: LinearConstrainSystem_8hpp.tex  LinearConstrainSystem_8hpp.tex.tmp  LinearConstrainSystem_8hpp__dep__incl.dot  LinearConstrainSystem_8hpp_source.tex  Tableau_8hpp.tex  Tableau_8hpp_source.tex  _linear_constrain_system_8hpp_source.tex  _tableau_8hpp_source.tex  annotated.tex  classTableau.tex  class_tableau.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  mainINFEASIBLE_8cpp.tex  mainMIN_8cpp.tex  mainUNBOUND_8cpp.tex  main_8cpp.tex  main_8cpp__incl.dot  md_README.tex  md__c___users__erion__desktop__programmazione__simplex_algorithm__r_e_a_d_m_e.tex  refman.tex  structLinearConstrainSystem.tex  structLinearConstrainSystem_1_1Constrain.tex  struct_linear_constrain_system.tex  struct_linear_constrain_system_1_1_constrain.tex  struct_tableau.tex
examples/: main  main.cpp  mainEQ.cpp  mainINFEASIBLE  mainINFEASIBLE.cpp  mainINFEASIBLE_print  mainMIN  mainMIN.cpp  mainMIN_print  mainUNBOUND  mainUNBOUND.cpp  mainUNBOUND_print  main_print
include/: LinearConstrainSystem.hpp  Tableau.hpp  print_functions.hpp  simplex_functions.hpp
